--- a/App/App.csproj
+++ b/App/App.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
@@ -14,6 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Domain.FSharp\Domain.FSharp.fsproj" />
     <ProjectReference Include="..\Domain\Domain.csproj" />
   </ItemGroup>
 
