Split Domain.fs into two Location.fs and Cargo.fs with different namespaces for different aggregates.

--- a/Domain.FSharp/Domain.FSharp.fsproj
+++ b/Domain.FSharp/Domain.FSharp.fsproj
@@ -5,7 +5,8 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <Compile Include="Domain.fs" />
+        <Compile Include="Location.fs" />
+        <Compile Include="Cargo.fs" />
         <None Include="scratchpad.fsx" />
     </ItemGroup>
 
