Replace value = null with isNull function for more optimized code.

--- a/Domain.FSharp/Domain.FSharp.fsproj
+++ b/Domain.FSharp/Domain.FSharp.fsproj
@@ -5,9 +5,9 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <Compile Include="Location.fs" />
-        <Compile Include="Cargo.fs" />
         <None Include="scratchpad.fsx" />
+        <Compile Include="Shipping\Location.fs" />
+        <Compile Include="Shipping\Cargo.fs" />
     </ItemGroup>
 
 </Project>
