--- a/Domain.FSharp/Domain.FSharp.fsproj
+++ b/Domain.FSharp/Domain.FSharp.fsproj
@@ -6,6 +6,7 @@
 
     <ItemGroup>
         <None Include="scratchpad.fsx" />
+        <Compile Include="Shipping\Voyage.fs" />
         <Compile Include="Shipping\Location.fs" />
         <Compile Include="Shipping\Cargo.fs" />
     </ItemGroup>
