--- a/Domain.FSharp/Domain.FSharp.fsproj
+++ b/Domain.FSharp/Domain.FSharp.fsproj
@@ -6,10 +6,10 @@
 
     <ItemGroup>
         <None Include="scratchpad.fsx" />
+        <Compile Include="Shipping\Infra.fs" />
         <Compile Include="Shipping\Voyage.fs" />
         <Compile Include="Shipping\Location.fs" />
         <Compile Include="Shipping\Cargo.fs" />
-        <Compile Include="Shipping\Events.fs" />
     </ItemGroup>
 
 </Project>
