--- a/Domain.FSharp/Domain.FSharp.fsproj
+++ b/Domain.FSharp/Domain.FSharp.fsproj
@@ -11,6 +11,7 @@
         <Compile Include="Location.Functions.fs" />
         <Compile Include="Shipping.Types.fs" />
         <Compile Include="Shipping.Functions.fs" />
+        <Compile Include="Cargo.fs" />
     </ItemGroup>
 
 </Project>
